2018-6-8 21:03-完成分类页面

--- a/public/m/index.html
+++ b/public/m/index.html
@@ -37,7 +37,7 @@
                             <!--支持循环，需要重复图片节点-->
                             <div class="mui-slider-item mui-slider-item-duplicate">
                                 <a href="#">
-                                    <img src="images/banner9.png" />
+                                    <img src="images/banner4.png" />
                                 </a>
                             </div>
                             <div class="mui-slider-item">
@@ -60,31 +60,7 @@
                                     <img src="images/banner4.png" />
                                 </a>
                             </div>
-                            <div class="mui-slider-item">
-                                <a href="#">
-                                    <img src="images/banner5.png" />
-                                </a>
-                            </div>
-                            <div class="mui-slider-item">
-                                <a href="#">
-                                    <img src="images/banner6.png" />
-                                </a>
-                            </div>
-                            <div class="mui-slider-item">
-                                <a href="#">
-                                    <img src="images/banner7.png" />
-                                </a>
-                            </div>
-                            <div class="mui-slider-item">
-                                <a href="#">
-                                    <img src="images/banner8.jpg" />
-                                </a>
-                            </div>
-                            <div class="mui-slider-item">
-                                <a href="#">
-                                    <img src="images/banner9.png" />
-                                </a>
-                            </div>
+                         
 
                             <!--支持循环，需要重复图片节点-->
                             <div class="mui-slider-item mui-slider-item-duplicate">
@@ -95,11 +71,6 @@
                         </div>
                         <div class="mui-slider-indicator">
                             <div class="mui-indicator mui-active"></div>
-                            <div class="mui-indicator"></div>
-                            <div class="mui-indicator"></div>
-                            <div class="mui-indicator"></div>
-                            <div class="mui-indicator"></div>
-                            <div class="mui-indicator"></div>
                             <div class="mui-indicator"></div>
                             <div class="mui-indicator"></div>
                             <div class="mui-indicator"></div>
@@ -480,10 +451,10 @@
     <!-- 9. 底部导航 -->
     <footer id="footer">
         <div class="mui-row">
-            <a href="#" class="mui-col-xs-3 fa fa-home now active">
+            <a href="./index.html" class="mui-col-xs-3 fa fa-home now active">
                 <span>首页</span>
             </a>
-            <a href="#" class="mui-col-xs-3 fa fa-bars">
+            <a href="./category.html" class="mui-col-xs-3 fa fa-bars">
                 <span>分类</span>
             </a>
             <a href="#" class="mui-col-xs-3 fa fa-shopping-cart">
