--- a/public/m/index.html
+++ b/public/m/index.html
@@ -23,7 +23,7 @@
     <!-- 1. 头部 -->
     <header id="header">
         <h4>乐淘云购</h4>
-        <a class="fa fa-search" aria-hidden="true"></a>
+        <a href="./search.html" class="fa fa-search" aria-hidden="true"></a>
     </header>
 
     <div class="mui-scroll-wrapper">
