--- a/public/m/search.html
+++ b/public/m/search.html
@@ -11,7 +11,7 @@
     <!-- 引入font字体图标 -->
     <link rel="stylesheet" href="./lib/fontAwesome/css/font-awesome.min.css">
     <!-- 引入自己的Less -->
-    <link rel="stylesheet/less" href="./less/category.less">
+    <link rel="stylesheet/less" href="./less/search.less">
     <!-- 引入编辑的Less的Js -->
     <script src="./lib/less/less.js"></script>
 </head>
@@ -20,28 +20,27 @@
     <!-- 1. 头部 -->
     <header id="header">
         <a href="./index.html" class="fa fa-arrow-left"></a>
-        <form action="" class="form-search">
-            <input type="search" placeholder="请输入你要搜索的鞋子">
-        </form>
-        <a href="./search.html" class="fa fa-search" aria-hidden="true"></a>
+        <h4>搜索中心</h4>
     </header>
     <!--  main主体部分 -->
     <main id="main">
-        <div class="category-left">
+        <!-- 搜索框部分 -->
+        <div class="title">
+            <form action="#">
+                <input type="text" class="input-search " placeholder="请输入你要搜索的关键字">
+                <a href="#" class="btn-search mui-btn mui-btn-primary">搜索</a>
+            </form>
+        </div>
+        <div class="history">
+            <div class="top mui-clearfix">
+                <span class="mui-pull-left">搜索历史</span>
+                <a href="#" class="fa fa-trash allDelete">清空记录</a>
+            </div>
             <ul>
-
+               
             </ul>
         </div>
-        <div class="category-right">
-            <div class="mui-scroll-wrapper">
-                <div class="mui-scroll">
-                    <!--这里放置真实显示的DOM内容-->
-                    <div class="mui-row">
-                        
-                    </div>
-                </div>
-            </div>
-        </div>
+
     </main>
     <!-- 9. 底部导航 -->
     <footer id="footer">
@@ -49,7 +48,7 @@
             <a href="./index.html" class="mui-col-xs-3 fa fa-home now ">
                 <span>首页</span>
             </a>
-            <a href="./category.html" class="mui-col-xs-3 fa fa-bars active">
+            <a href="./category.html" class="mui-col-xs-3 fa fa-bars ">
                 <span>分类</span>
             </a>
             <a href="#" class="mui-col-xs-3 fa fa-shopping-cart">
@@ -60,24 +59,6 @@
             </a>
         </div>
     </footer>
-
-
-    <script type="text/html" id="categoryLeftTem">
-        {{each rows as value i}}
-        <li class="{{i==0?'active':''}}">
-            <a href="#" data-id='{{value.id}}'>{{value.categoryName}}</a>
-        </li>
-        {{/each}}
-    </script>
-    <script type="text/html" id="categoryRightTem">
-        {{each rows as value i}}
-            <a href="#" class="mui-col-xs-4">
-                <img src="{{value.brandLogo}}" alt="">
-                <p>{{value.brandName}}</p>
-            </a>
-        {{/each}}
-    </script>
-
     <!-- 引入Mui的JS -->
     <script src="./lib/mui/js/mui.js"></script>
     <!-- 引入zepto的JS -->
@@ -85,7 +66,15 @@
     <!-- 引入模板的JS -->
     <script src="./lib/artTemplate/template.js"></script>
     <!-- 自己的JS -->
-    <script src="./js/category.js"></script>
+    <script src="./js/search.js"></script>
+    <script type='text/html' id="historyTem">
+        {{each}}
+        <li>
+            <span>{{$value.search}}</span>
+            <a href="#" class="fa fa-times delete" data-id={{$index}}></a>
+        </li>
+        {{/each}}
+    </script>
 </body>
 
 </html>
