2018-6-14完成移动页面

--- a/public/m/index.html
+++ b/public/m/index.html
@@ -457,10 +457,10 @@
             <a href="./category.html" class="mui-col-xs-3 fa fa-bars">
                 <span>分类</span>
             </a>
-            <a href="#" class="mui-col-xs-3 fa fa-shopping-cart">
+            <a href="./cars.html" class="mui-col-xs-3 fa fa-shopping-cart">
                 <span>购物车</span>
             </a>
-            <a href="#" class="mui-col-xs-3 fa fa-user">
+            <a href="./user.html" class="mui-col-xs-3 fa fa-user">
                 <span>会员中心</span>
             </a>
         </div>
