--- a/public/m/user.html
+++ b/public/m/user.html
@@ -11,7 +11,7 @@
     <!-- 引入font字体图标 -->
     <link rel="stylesheet" href="./lib/fontAwesome/css/font-awesome.min.css">
     <!-- 引入自己的Less -->
-    <link rel="stylesheet/less" href="./less/category.less">
+    <link rel="stylesheet/less" href="./less/user.less">
     <!-- 引入编辑的Less的Js -->
     <script src="./lib/less/less.js"></script>
 </head>
@@ -19,29 +19,33 @@
 <body>
     <!-- 1. 头部 -->
     <header id="header">
-        <a href="./index.html" class="fa fa-arrow-left"></a>
-        <form action="" class="form-search">
-            <input type="search" placeholder="请输入你要搜索的鞋子">
-        </form>
-        <a href="./search.html" class="fa fa-search" aria-hidden="true"></a>
+        <a href="./product.html" class="fa fa-arrow-left"></a>
+        <h4>购物车</h4>
+        <a href="#" class="fa fa-refresh"></a>
     </header>
     <!--  main主体部分 -->
     <main id="main">
-        <div class="category-left">
-            <ul>
-
-            </ul>
-        </div>
-        <div class="category-right">
-            <div class="mui-scroll-wrapper">
-                <div class="mui-scroll">
-                    <!--这里放置真实显示的DOM内容-->
-                    <div class="mui-row">
-                        
+        <ul class="mui-table-view">
+            <li class="mui-table-view-cell mui-media ">
+                <a href="javascript:;" class="mui-navigate-right">
+                    <img class="mui-media-object mui-pull-left" src="./images/user.jpg">
+                    <div class="mui-media-body">
+                        <span>幸福</span>
+                        <p class='mui-ellipsis'>能和心爱的人一起睡觉，是件幸福的事情；可是，打呼噜怎么办？</p>
                     </div>
-                </div>
-            </div>
-        </div>
+                </a>
+            </li>
+            <li class="mui-table-view-cell">
+                <a href="" class="mui-navigate-right">账号与安全</a>
+            </li>
+            <li class="mui-table-view-cell">
+                <a href="" class="mui-navigate-right">我的购物车</a>
+            </li>
+            <li class="mui-table-view-cell">
+                <a href="" class="mui-navigate-right">收货地址管理</a>
+            </li>
+        </ul>
+        <a href="#" class="mui-btn mui-btn-danger loginOut">退出登录</a>
     </main>
     <!-- 9. 底部导航 -->
     <footer id="footer">
@@ -49,34 +53,17 @@
             <a href="./index.html" class="mui-col-xs-3 fa fa-home now ">
                 <span>首页</span>
             </a>
-            <a href="./category.html" class="mui-col-xs-3 fa fa-bars active">
+            <a href="./category.html" class="mui-col-xs-3 fa fa-bars">
                 <span>分类</span>
             </a>
             <a href="./cars.html" class="mui-col-xs-3 fa fa-shopping-cart">
                 <span>购物车</span>
             </a>
-            <a href="./user.html" class="mui-col-xs-3 fa fa-user">
+            <a href="./user.html" class="mui-col-xs-3 fa fa-user active">
                 <span>会员中心</span>
             </a>
         </div>
     </footer>
-
-
-    <script type="text/html" id="categoryLeftTem">
-        {{each rows as value i}}
-        <li class="{{i==0?'active':''}}">
-            <a href="#" data-id='{{value.id}}'>{{value.categoryName}}</a>
-        </li>
-        {{/each}}
-    </script>
-    <script type="text/html" id="categoryRightTem">
-        {{each rows as value i}}
-            <a href="#" class="mui-col-xs-4">
-                <img src="{{value.brandLogo}}" alt="">
-                <p>{{value.brandName}}</p>
-            </a>
-        {{/each}}
-    </script>
 
     <!-- 引入Mui的JS -->
     <script src="./lib/mui/js/mui.js"></script>
@@ -85,7 +72,10 @@
     <!-- 引入模板的JS -->
     <script src="./lib/artTemplate/template.js"></script>
     <!-- 自己的JS -->
-    <script src="./js/category.js"></script>
+    <script src="./js/user.js">
+    </script>
+
+
 </body>
 
 </html>
